Fixed overflow issue on main div

--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -71,7 +71,7 @@ max-height: 35px;
 margin-left: 250px;
 transition: margin-left .1s;
 padding: 10px;
-width: 85%;
+width: calc(100% - 280px);
 height: 750px;
 background-color: #f1f2f6;
 border-radius: 10px;
